--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,7 +49,7 @@
                 } // Callback for Modal close
             });
             $('.parallax').parallax();
-            $('select').material_select();
+//            $('select').material_select();
             $('.dropdown-button').dropdown();
             $('.tooltipped').tooltip({delay: 50});
         });
