--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="manifest.json">
 
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/frameworks/ghpages-materialize.css">
-    <link href="css/frameworks/micon.css" rel="stylesheet">
-    <link href="css/frameworks/animate.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/frameworks/ghpages-materialize.css">
+    <link href="/css/frameworks/micon.css" rel="stylesheet">
+    <link href="/css/frameworks/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="fav.ico">
+    <link rel="shortcut icon" href="/fav.ico">
 
     <title>Boots Events Manager</title>
   </head>
@@ -22,12 +22,12 @@
 
     <div id="root"></div>
 
-    <script src="js/app.bundle.js" type="text/javascript"></script>
+    <script src="/js/app.bundle.js" type="text/javascript"></script>
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/materialize.min.js"></script>
+    <script src="/js/wow.min.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         $(document).ready(function () {
             var modal = $('.modal');
