feat: modify single event Modal to handle both edit and create events.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,7 +45,7 @@
                 complete: function () {
                     $('.body__holdr').removeClass('blur__fits');
                     $('.modal-overlay').css({'display': 'none'});
-                    this.removeClass('search__pane');
+                    modal.removeClass('search__pane');
                 } // Callback for Modal close
             });
             $('.parallax').parallax();
