chores: server test for users and centers..

--- a/client/public/admin.html
+++ b/client/public/admin.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <!--<link rel="stylesheet" href="/css/frameworks/ghpages-materialize.css">-->
-    <!--<link href="/css/frameworks/micon.css" rel="stylesheet">-->
-    <!--<link href="/css/frameworks/animate.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="/css/frameworks/ghpages-materialize.css">
+    <link href="/css/frameworks/micon.css" rel="stylesheet">
+    <link href="/css/frameworks/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="/fav.ico">
 
@@ -73,9 +73,9 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-<!--<script src="/js/jquery-3.2.1.min.js"></script>-->
-<!--<script src="/js/materialize.min.js"></script>-->
-<!--<script src="/js/wow.min.js"></script>-->
+<script src="/js/jquery-3.2.1.min.js"></script>
+<script src="/js/materialize.min.js"></script>
+<script src="/js/wow.min.js"></script>
 <script>
     $(document).ready(function () {
         var modal = $('.modal');
